code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agent_status_missing_batch_displays_error.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 › /agents

 ✖ ⚠️  status_update: missing agent batch_id. tool=agent_status
   agents=orphan-agent

 +----------------------------- ✶ Using tools... -----------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                       Ctrl+H help  •  API key
