code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_continue_mode_transitions.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands

  Auto Drive > Auto Drive ready to run cargo nextest  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands

  Auto Drive > Auto Drive ready to run cargo nextest  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands

  Auto Drive > Auto Drive ready to run cargo nextest  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive
