code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__browser_session_grouped_desired_layout.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
   - Reading files
   - Running commands


 › Open docs and find login button

   +- +Browser-----------------------------+
   |  |Screenshot:                         |
   |  |browser_session.png                 |  Actions
   |  |                                    |   MM:SS  Opened    https://ex
   |  |                                    |                    ample.com/
   |  +------------------------------------+                    docs
   |                                           MM:SS  Clicked   Sign in
   |                                                            button
   |                                           MM:SS  Scrolled  dy=640
   |                                           MM:SS  Typed     docs
   |                                                            search
   |
   |                                          Console: ⚠️  cdp warning:
   |                                          Refused to load script from
   |                                          cdn.example.com
   |
   +- [Ctrl+B] View · [Esc] Stop

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                       Ctrl+H help  •  API key
